# database

./: LICENSE  README.md  database.code-workspace
.postman/: api  api_91adea62-cb35-4953-90a7-627b97f0059f
api/: .env-example  .gitignore  Cargo.toml  Shuttle.toml
api/postman/schemas/: index.yaml
api/src/: auth.rs  lib.rs  main.rs
api/src/models/: auth.rs  error.rs
api/src/routes/: mod.rs
api/src/routes/bot/: bot_users.rs  mod.rs  util.rs
api/src/routes/dashboard/: access.rs  auth.rs  mod.rs  users.rs
dashboard/: .env-example  .gitattributes  .prettierrc  package-lock.json  package.json  tailwind.config.cjs
dashboard/src/: app.html
dashboard/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
dashboard/src/routes/login/: +page.server.ts  +page.svelte
dashboard/src/routes/users/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +page.ts
postman/schemas/: index.yaml
