[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
postgrest = "1.0"
shuttle-service = { version = "0.9.0", features = ["web-axum"] }
axum = { version = "0.6.4", features = ["headers"] }
sync_wrapper = "0.1.1"
shuttle-secrets = "0.9.0"
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.22.0", features = ["full"] }
tower = "0.4.13"
uuid = "1.2.2"
serde_json = "1.0.91"
serde = "1.0.152"
axum-login = "0.4.1"
rand = "0.8.5"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
sha2 = "0.10.6"
base64 = "0.21.0"
reqwest = { version = "0.11.14", features = ["json"] }
jsonwebtoken = "8.2.0"
once_cell = "1.17.0"

[profile.dev.package.num-bigint-dig]
opt-level = 3
