[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
postgrest = "1.0"
shuttle-runtime = "0.18.0"
shuttle-axum = "0.18.0"
shuttle-secrets = "0.18.0"
axum = { version = "0.6.18", features = ["headers", "macros"] }
sync_wrapper = "0.1.2"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
uuid = "1.3.3"
serde_json = "1.0.96"
serde = "1.0.164"
axum-login = "0.4.1"
rand = "0.8.5"
sha2 = "0.10.6"
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["json"] }
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"

[profile.dev.package.num-bigint-dig]
opt-level = 3
